Bug 414498 - "(i18n_argument_missing)" appears several times in "Download new global themes" window
Summary: "(i18n_argument_missing)" appears several times in "Download new global theme...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.64.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Jeremy Whiting
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-25 14:44 UTC by Patrick Silva
Modified: 2019-11-29 12:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (436.14 KB, image/png)
2019-11-25 14:44 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-11-25 14:44:11 UTC
Created attachment 124113 [details]
screenshot

STEPS TO REPRODUCE
1. open system settings > global theme
2. click on "Download new global themes" button
3. 

OBSERVED RESULT
See the attached screenshot.

EXPECTED RESULT
no "(i18n_argument_missing)" text should appear in "Download new global themes" window

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.17.80
KDE Frameworks Version: 5.65.0
Qt Version: 5.13.2
Comment 1 Nate Graham 2019-11-28 04:20:12 UTC
Patch: https://phabricator.kde.org/D25585
Comment 2 Nate Graham 2019-11-29 12:59:04 UTC
Git commit dd5c9d461d868d4a6227c4ed304ddbe22b64c583 by Nate Graham.
Committed on 29/11/2019 at 12:58.
Pushed by ngraham into branch 'master'.

Fix i18n syntax to avoid runtime errors

Summary:
Using `.arg()` in `i18n()` calls can lead to runtime errors such as the ones shown in
https://bugs.kde.org/show_bug.cgi?id=414498. Let's port away from that.

Test Plan: QML GHNS dialog no longer has any i18n errors in strings

Reviewers: leinir, #plasma, #frameworks

Reviewed By: leinir

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D25585

M  +1    -1    src/attica/atticaprovider.cpp
M  +1    -1    src/qtquick/qml/Dialog.qml
M  +6    -6    src/qtquick/qml/EntryDetails.qml
M  +1    -1    src/qtquick/qml/private/EntryCommentDelegate.qml
M  +1    -1    src/qtquick/qml/private/EntryCommentsPage.qml
M  +2    -2    src/qtquick/qml/private/entrygriddelegates/BigPreviewDelegate.qml
M  +2    -2    src/qtquick/qml/private/entrygriddelegates/TileDelegate.qml
M  +1    -1    src/qtquick/quickitemsmodel.cpp

https://commits.kde.org/knewstuff/dd5c9d461d868d4a6227c4ed304ddbe22b64c583