Fix i18n syntax to avoid runtime errors

Summary:
Using `.arg()` in `i18n()` calls can lead to runtime errors such as the ones shown in
https://bugs.kde.org/show_bug.cgi?id=414498. Let's port away from that.

BUG: 414498

Test Plan: QML GHNS dialog no longer has any i18n errors in strings

Reviewers: leinir, #plasma, #frameworks

Reviewed By: leinir

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D25585