src/qtquick/qml/private/EntryCommentDelegate.qml
@@ -153,7 +153,7 @@ QtLayouts.RowLayout {
                 id: authorLabel
                 visible: (url !== "")
                 url: (component.commentAuthor.homepage === "") ? component.commentAuthor.profilepage : component.commentAuthor.homepage
-                text: (component.author === component.entryAuthorId) ? i18nc("The author label in case the comment was written by the author of the content entry the comment is attached to", "%1 <i>(author)</i>").arg(component.commentAuthor.name) : component.commentAuthor.name
+                text: (component.author === component.entryAuthorId) ? i18nc("The author label in case the comment was written by the author of the content entry the comment is attached to", "%1 <i>(author)</i>", component.commentAuthor.name) : component.commentAuthor.name
             }
             QtControls.Label {
                 visible: !authorLabel.visible
